# Mac_asr

./: .gitignore  LICENSE  README.md  config_example.toml
src/: checkpoint.py  config.py  connector.py  data.py  encoder.py  evaluation.py  llm.py  macasr.py  main.py  model_init.py  normalizer.py  pyproject.toml  trainer.py  utils.py  validation.py
