[project]
name = "src"
version = "0.1.0"
description = "MAC ASR project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.11.0",
    "bitsandbytes==0.47.0",
    "datasets==3.6.0",
    "deepspeed==0.18.2",
    "einops>=0.8.1", # tensor operations
    "einx>=0.3.0", # more general tensor operations
    "ipykernel==6.30.1",
    "jaxtyping>=0.3.0", # type hints for pytorch/jax/numpy
    "jiwer>=4.0.0",
    "librosa==0.11.0",
    "numpy",
    "pandas",
    "peft==0.17.1",
    "psutil>=6.1.1",
    "pytest>=8.3.4",
    "regex>=2024.11.6", # more powerful regex than the builtin `re` module
    "setuptools~=80.9.0",
    "soundfile>=0.13.1",
    "submitit>=1.5.2", # job submission for SLURM
    "tiktoken>=0.9.0",
    "torch~=2.6.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "torchaudio==2.6.0; platform_system != 'Darwin'",
    "torchcodec==0.2.0",
    "transformers~=4.56.0",
    "triton~=3.2.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.7",
    "ty>=0.0.1a16",
    "tomli>=2.0.1; python_version < '3.11'",
    "tensorboard>=2.20.0",
    "tensorflow>=2.20.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
